--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-place-autocomplete": "^2.0.0",
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
+    "ember-simple-google-maps": "^1.0.0",
     "ember-source": "~3.10.0",
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^6.2.0",
